--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -1,11 +1,10 @@
 .navbar.navbar-default.navbar-fixed-top
-  .container-fluid
-    a.navbar-brand(href='/')
-      img(width=20 src='/images/logo.png')
-      span.brand-title Bazaar
-    select.search-box(multiple="multiple" style="width:50%")
-    button.navbar-toggle(id='menu-toggle' type='button')
-      span.sr-only Toggle navigation
-      span.icon-bar
-      span.icon-bar
-      span.icon-bar
+  a.navbar-brand(href='/')
+    img(width=20 src='/images/logo.png')
+    span.brand-title Bazaar
+  button.navbar-toggle(id='menu-toggle' type='button')
+    span.sr-only Toggle navigation
+    span.icon-bar
+    span.icon-bar
+    span.icon-bar
+  select.search-box(multiple="multiple", style="width: 60%;")
