--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -174,11 +174,10 @@ textarea {
   padding-bottom: 1%;
 
   .button-wrapper {
-    display: inline-block;
-    width: 50%;
-    padding: 0 10%;
+    text-align: center;
     button {
-      width: 100%;
+      min-width: 35%;
+      margin: 0 5%;
     }
   }
 }
