--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -87,6 +87,72 @@ textarea {
   }
 }
 
+// Sidebar
+
+#sidebar-wrapper {
+  z-index: 1000;
+  position: fixed;
+  right: 20px;
+  width: 52px;
+  height: 100%;
+  margin-right: -20px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  background: gray;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+
+  #page-content-wrapper {
+      position: relative;
+      margin-right: 0;
+  }
+
+  &.toggled {
+    width: 200px;
+    #page-content-wrapper {
+      width: 100%;
+      padding: 20px;
+      position: relative;
+    }
+  }
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  li {
+    text-indent: 20px;
+    line-height: 50px;
+
+    a {
+      display: block;
+      text-decoration: none;
+      color: black;
+
+      &:hover {
+        text-decoration: none;
+        color: #fff;
+        background: rgba(255,255,255,0.2);
+      }
+
+      &:active, &:focus {
+        text-decoration: none;
+      }
+
+      img {
+        margin-right: 20px;
+      }
+    }
+  }
+}
+
 // Alerts
 // -------------------------
 
