--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,6 +30,8 @@ html
     script(src='/js/lib/bootstrap-slider.min.js')
     script(src='/js/lib/bootstrap-datetimepicker.js')
     script(src='/js/lib/select2.full.min.js')
+    script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ2hLVYEOmR5pX5MMOaxpeT5OikIxE6gk&libraries=places')
+
     script(src='/js/main.js')
     script(src="https://cdn.socket.io/socket.io-1.2.0.js")
 
