Add sign up link to login page and vice versa
So if users land on login page and don't yet have
account, they can quickly switch to sign up page.

--- a/views/account/login.jade
+++ b/views/account/login.jade
@@ -20,6 +20,11 @@ block content
             i.fa.fa-user
             | Login
           a.btn.btn-link(href='/forgot') Forgot your password?
+
+      .form-group
+        .col-sm-offset-3.col-sm-7
+          | Don't have an account?
+          a.sign-up(href='/signup') Sign up
       .form-group
         .col-sm-offset-3.col-sm-7
           hr
