--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -34,6 +34,10 @@ block content
                 button.btn.btn-success(type='submit')
                   i.fa.fa-user-plus
                   | Signup
+            .form-group
+              .col-sm-offset-3.col-sm-7
+                | Already have an account?
+                a.sign-up(href='/login') Login
         .col-md-4
           a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
             i.fa.fa-facebook
