--- a/views/users/profile.jade
+++ b/views/users/profile.jade
@@ -3,7 +3,7 @@ extends ../layout
 block content
   include ../partials/newrequest
   input#csrf_token(type='hidden', name='_csrf', value=_csrf)
-  .user-profile
+  .user-profile.content-page
     .row
       .col-md-6.first-box
         .box
