--- a/views/account/signup.jade
+++ b/views/account/signup.jade
@@ -4,7 +4,7 @@ block content
   .content-page
     .page-header
       h3 Sign up
-    .container
+    .container-fluid
       .row
         .col-md-8
           form.form-horizontal(id='signup-form', method='POST')
