Move to col-sm so that they stack on small screens

--- a/views/users/transactions.jade
+++ b/views/users/transactions.jade
@@ -44,9 +44,9 @@ mixin showTransactions(t_list)
                   span.glyphicon.glyphicon-calendar
             button.btn.btn-secondary.suggest Suggest
             .responses.row
-              .col-xs-6
+              .col-sm-6
                 button.btn.btn-primary.chat Chat
-              .col-xs-6
+              .col-sm-6
                 button.btn.btn-success(data-toggle="modal", data-target="#reviewModal") Mark complete
 
           .messaging
