Reduce gutter width of columns

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -1,5 +1,6 @@
 $brand-success: #98D9B5;
 $brand-primary: #000000;
+$grid-gutter-width: 10px;
 @import "themes/flatly/variables";
 
 @import "lib/bootstrap/bootstrap";
