Use flex box on right side of profile page as well
To make sure alignment is right.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -479,10 +479,10 @@ textarea {
       @media (min-width: $screen-md) {
         display: flex;
       }
-      .first-box {
+      .info-box {
         display: flex;
         flex-direction: column;
-        > .box {
+        > div {
           flex: 1;
         }
       }
