Make sure you can only select one skill during new request

--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -15,7 +15,7 @@
           #request-recipient(style="display:none;" recipient)
           .form-group
             label.control-label(for="skill") Request one skill:
-            .skill-select
+            .skill-select.unique
           .form-group
             label.control-label(for="message-text") Message:
             textarea#message-text.form-control
