--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -454,19 +454,36 @@ textarea {
   }
 }
 
+.circular-img {
+  position: relative;
+  overflow: hidden;
+  border-radius: 50%;
+  img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 100%;
+    width: auto;
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+  }
+}
+
 
 // Profile page
 
 .user-profile {
-  img.profile-pic {
+  .profile-pic {
     width: 30%;
+    padding-top: 30%;
     display: inline-block;
   }
 
   .bio {
     display: inline-block;
     margin-left: 10%;
-    vertical-align: middle;
+    vertical-align: top;
     .place {
       font-size: 13px;
     }
@@ -518,23 +535,12 @@ textarea {
   .review {
     margin: 30px 0;
     font-size: 12px;
+
     .profile-pic {
-      position: relative;
       width: 50px;
       height: 50px;
-      overflow: hidden;
-      border-radius: 50%;
-      img {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        height: 100%;
-        width: auto;
-        -webkit-transform: translate(-50%,-50%);
-            -ms-transform: translate(-50%,-50%);
-                transform: translate(-50%,-50%);
-      }
     }
+
     .identity {
       text-align: center;
       display: inline-block;
