--- a/views/account/settings.jade
+++ b/views/account/settings.jade
@@ -39,13 +39,16 @@ block content
     .form-horizontal
       .form-group
         .col-sm-offset-3.col-sm-4
-          if user.google
-            p: a.text-danger(href='/account/unlink/google') Unlink your Google account
-          else
-            p: a(href='/auth/google') Link your Google account
-        .col-sm-offset-3.col-sm-4
           if user.facebook
             p: a.text-danger(href='/account/unlink/facebook') Unlink your Facebook account
           else
-            p: a(href='/auth/facebook') Link your Facebook account
+            a.btn.btn-block.btn-facebook.btn-social(href='/auth/facebook')
+              i.fa.fa-facebook
+              | Link your Facebook account
+          if user.google
+            p: a.text-danger(href='/account/unlink/google') Unlink your Google account
+          else
+            a.btn.btn-block.btn-google.btn-social(href='/auth/google')
+              i.fa.fa-google-plus
+              | Link your Google account
   script(src='/js/profile.js')
