Add spinner when waiting for review

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -684,6 +684,11 @@ textarea {
         }
       }
 
+      .loading {
+        text-align: center;
+        display: none;
+      }
+
       .scheduling {
         padding: 15px;
         .pac-input {
