Show the request type on transaction
restructure the transaction cards a bit to be
able to show request type.

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -623,9 +623,17 @@ textarea {
         width: 100%;
       }
       .content {
+        display: flex;
         float: left;
         .direction {
           margin: 0 5px;
+        }
+        .identity {
+          text-align: center;
+          margin: 0 8px;
+        }
+        .exchange-type {
+          font-style: italic;
         }
       }
       .timestamp {
