Have one request type preselected by default

--- a/views/partials/newrequest.jade
+++ b/views/partials/newrequest.jade
@@ -8,7 +8,7 @@
       .modal-body
         .container-fluid
           .row
-            .col-xs-4.service-type(name=RequestType.LEARN) Receive
+            .col-xs-4.service-type.selected(name=RequestType.LEARN) Receive
             .col-xs-4.service-type(name=RequestType.SHARE) Give
             .col-xs-4.service-type(name=RequestType.EXCHANGE) Exchange
         form.profile-request-form
