New version of scheduling exchange
With an edit button and smaller map

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -699,13 +699,15 @@ textarea {
 
       .scheduling {
         padding: 15px;
+        .editing {
+          display: none;
+        }
         .pac-input {
           min-width: 80%;
           margin-bottom: 10px;
         }
         .map-canvas {
-          height: 400px;
-          width: 100%;
+          height: 200px;
         }
 
         @media (max-width: $screen-sm) {
