--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -12,6 +12,9 @@ $grid-gutter-width: 10px;
 
 @import "themes/flatly/flatly";
 
+@font-face { font-family: 'Avenir';
+             src: url('/fonts/Avenir/AvenirLTStd-Medium.otf') format('truetype'); }
+
 // Scaffolding
 // -------------------------
 
@@ -24,6 +27,7 @@ body {
   padding-top: 60px;
   margin-bottom: 75px;
   background-color: #f4f4f4;
+  font-family: 'Avenir';
 }
 
 footer {
@@ -38,12 +42,35 @@ footer {
   }
 }
 
+a {
+  color: #cb5d5a;
+}
+
+a:hover {
+  color: #E74C3C;
+  text-decoration: none;
+}
+
 .content-page {
-  width: 75%;
+  width: 100%;
+  margin: 0 auto;
+  @media (max-width: $screen-sm) {
+    width: 90%;
+  }
+}
+
+
+.transaction-page {
+  width: 100%;
   margin: 0 auto;
   @media (max-width: $screen-sm) {
     width: 100%;
   }
+}
+
+
+.container-fluid {
+  padding: 0px;
 }
 
 // Input Fields
@@ -81,11 +108,6 @@ textarea {
       display: initial;
       margin-right: 5px;
     }
-    .brand-title {
-      @media (max-width: $screen-sm) {
-        display: none;
-      }
-    }
   }
 
   .navbar-toggle {
@@ -107,7 +129,7 @@ textarea {
   margin-right: -20px;
   overflow-y: auto;
   overflow-x: hidden;
-  background: #d2d2d2;
+  background: #e6e6e6;
   -webkit-transition: all 0.5s ease;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -257,24 +279,26 @@ textarea {
     text-align: center;
     button {
       min-width: 35%;
-      margin: 0 5%;
+      margin: 0px 0 0 13%;
+    float: left;
     }
   }
 }
 
 .skill-label {
   display: inline-block;
-  padding: 5px;
+  padding: 3px 8px;
   margin: 5px;
   border: 1px solid black;
-  background-color: #efefef;
-  border-radius: 5px;
+  background-color: none;
+  border-radius: 2px;
 }
 
 .skill-select {
-  .skill-label.selected {
+  .skill-label.selected, .skill-label:hover {
     color: white;
-    background-color: black;
+    background-color: #4a4a4a;
+    curser: pointer;
   }
 }
 
@@ -284,7 +308,7 @@ textarea {
 
 .user-card {
   padding: 0px 6px 6px 6px;
-  box-shadow: 1px 1px 2px gray;
+    border: 1px solid lightgray;
   font-family: Avenir;
 
   .bookmark {
@@ -294,14 +318,14 @@ textarea {
   }
 
   .profile-info {
-    padding: 10px;
+    padding: 15px 10px 10px 10px;
     background-color: white;
 
     .profile-pic {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      border: 2px black solid;
+      border: none;
       background-size: cover;
       background-position: center;
       margin: 0 auto;
@@ -331,11 +355,6 @@ textarea {
     .skill-icons {
       overflow: hidden;
       padding-top: 10px;
-      .skill-label {
-        &.highlight {
-          box-shadow: 0px 0px 5px 5px rgba(255, 255, 190, 1);
-        }
-      }
     }
 
     hr {
@@ -385,7 +404,7 @@ textarea {
   }
 
   #submit-skill-request {
-    width: 80%;
+    width: 90%;
   }
 }
 
@@ -397,6 +416,8 @@ textarea {
 
 .modal-footer {
   text-align: center;
+   background: #f2f2f2;
+   border: none;
 }
 
 // Account page
@@ -418,7 +439,7 @@ textarea {
   }
 
   .user-activities {
-    padding-left: 0px;
+    padding-left: 15px;
   }
 
   .btn-social {
@@ -438,20 +459,28 @@ textarea {
     }
   }
 
+
+.transaction-review-form {
+  width: 90%;
+    margin: 0 auto;
+}
+
   .upload-message {
-    display: none;
-    position: absolute;
-    bottom: 10px;
-    left: 10%;
+    display: block;
+    margin: 7px auto;
     padding: 2px;
     text-align: center;
     width: 80%;
-    background-color: #203049;
+    background-color: #464646;
     color: white;
-    font-weight: 600;
-    border: 1px solid black;
+    font-weight: 200;
+    border: none;
     border-radius: 4px;
   }
+
+   .upload-message:hover, .upload-message:focus, .upload-message:active {
+     background-color: #999;
+   }
 }
 
 .circular-img {
@@ -516,21 +545,19 @@ textarea {
   }
 
   .box {
-    background-color: white;
     border-radius: 5px;
-    border: 1px solid lightgray;
     padding: 10px 20px;
   }
 
-
   .btn-primary {
-    width: 100%;
-    margin-top: 10px;
-    text-transform: uppercase;
-    @media (max-width: $screen-md) {
+    width: 90%;
+    text-transform: none;
+    border-radius: 2px;
+    @media (max-width: $screen-sm) {
       margin-bottom: 10px;
     }
   }
+
 
   .review {
     margin: 30px 0;
@@ -591,14 +618,14 @@ textarea {
 
     .exchange-type {
       padding: 10px 0px;
-      background-color: gray;
+      background-color: #f2f2f2;
+      border: 1px solid #efefef;
       &:hover {
         background-color: #E6E6E6;
         cursor: pointer;
       }
       &.selected, &.selected:hover {
-        background-color: lightblue;
-        color: white;
+        background-color: #e6e6e6;
       }
     }
   }
@@ -616,8 +643,7 @@ textarea {
       }
       text-align: left;
       background-color: white;
-      margin: 10px auto;
-      width: 70%;
+      width: 95%;
       border-radius: 10px;
       @media(max-width: 600px) {
         width: 100%;
@@ -644,9 +670,11 @@ textarea {
       .timestamp {
         float: right;
         font-size: 10px;
+        margin-top: 12px;
       }
       .see-more {
-        padding: 20px 5px;
+        padding: 7px 5px;
+        border: 1px solid lightgray;
         width: 100%;
         display: inline-block;
       }
@@ -677,7 +705,6 @@ textarea {
       }
 
       .messaging {
-        margin: 0 15px;
         padding: 15px;
         textarea {
           width: 100%;
@@ -785,8 +812,14 @@ textarea {
   .checkmark {
     text-align: center;
     margin-bottom: 10px;
+    padding-top: 25px;
   }
 }
+
+.profile-accept-form .form-group {
+    margin: 15px auto 0 auto;
+    width: 90%;
+  }
 
 
 /* This is for when selecting rating for new review */
@@ -900,7 +933,7 @@ textarea {
       clear: both;
       margin-right: 5px;
       .comment {
-        background-color: #D1EEFC;
+        background-color: #fff;
       }
     }
 
@@ -916,7 +949,6 @@ textarea {
     .comment {
       padding: 8px;
       border-radius: 5px;
-      box-shadow: 0 0 6px #B2B2B2;
       margin-bottom: 3px;
     }
 
@@ -930,4 +962,382 @@ textarea {
 
 .email_form {
   margin-top: 20px;
+}
+
+// Navbar Edits
+
+.navbar-default {
+  background: #fff;
+}
+
+.navbar-default .navbar-brand {
+  color: #000;
+  text-transform: lowercase;
+}
+
+.navbar-default .navbar-brand:hover {
+  color: #999;
+}
+
+.navbar-toggle {
+  border: none;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #000;
+}
+
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+  background-color: white;
+}
+
+
+// Register Edits
+
+.form-control {
+  border: 1px solid #efefef;
+  border-radius: 3px;
+}
+
+.edit-profile-page .form-group .radio {
+  border: 1px solid #efefef;
+  width: 33%;
+  float: left;
+}
+
+.radio.col-sm-4[value="refugee"],
+.radio.col-sm-4[value="native"] {
+  width:50%;
+}
+
+.form-control:active, .form-control:focus {
+  border: 1px solid #efefef;
+}
+
+.cancel {
+  background-color: #f21010;
+  border: none;
+  margin: 0 auto;
+  display: block;
+  color: #fff;
+}
+
+.btn-primary {
+  margin: 0 auto;
+  display: block;
+  color: #fff;
+  background-color: #98D9B5;
+  border: none;
+}
+
+.modal-footer .btn-primary {
+  display: initial;
+  margin: 0 auto;
+}
+
+.col-sm-offset-3 .btn {
+  border: none;
+  color: #fff;
+}
+
+.col-sm-7  .btn-primary {
+  margin: 10px 0px;
+}
+
+.btn-default {
+  border: none;
+  background-color: #f21010;
+}
+
+.btn-default:hover {
+  background-color: #bf6966;
+}
+
+.btn-primary {
+  margin: 10px auto;
+  display: block;
+}
+
+.btn.btn-primary.btn-md.send-button {
+  margin: 0 auto;
+}
+
+.btn.btn-secondary.suggest {
+  background-color: #98D9B5;
+  color: #fff;
+  border: none;
+}
+
+.btn-primary:hover, .btn-primary:active, .btn-primary:focus,
+.col-sm-offset-3 .btn:hover, .col-sm-offset-3 .btn:active, .col-sm-offset-3 .btn:focus,
+.btn.btn-secondary.suggest:hover, .btn.btn-secondary.suggest:focus, .btn.btn-secondary.suggest:active {
+  background-color: #73cb9a;
+  border: none;
+}
+
+
+.cancel:hover, .cancel:active, .cancel:focus, {
+  background-color: #999;
+  border: none;
+}
+
+
+
+.col-sm-3 .fa-user, .col-sm-offset-3 .fa-user-plus, .btn-primary .fa, .btn-danger .fa {
+  display: none;
+}
+
+.col-sm-3.btn {
+  border-radius: 1px;
+  padding: 10px 25px;
+}
+
+.col-sm-offset-3 .btn {
+  border-radius: 3px;
+  padding: 10px 25px;
+}
+
+.btn-link, .sign-up {
+  color: #222;
+}
+
+.btn-link:hover, .btn-link:active, .btn-link:focus,
+.sign-up:hover, .sign-up:active, .sign-up:focus {
+  color: #999;
+  text-decoration: none;
+}
+
+.btn-danger {
+  display: block;
+  margin: 15px auto 0 auto;
+}
+
+.btn.btn-danger:hover, .btn.btn-danger:active, .btn.btn-danger:focus {
+  background-color: #bf6966;
+}
+
+// Login Social
+
+.btn-facebook, .btn-google {
+  border: none;
+}
+
+.btn-facebook:hover, .btn-facebook:active, .btn-facebook:focus,
+.btn-google:hover, .btn-google:active, .btn-google:focus {
+  border: none;
+}
+
+.btn-social {
+  line-height: 2;
+  border-radius: 2px;
+  margin-bottom: 15px;
+  padding-left: 70px!important;
+}
+
+.btn-social > :first-child {
+  top: 4px;
+  width: 50px;
+}
+
+.btn.btn-link {
+  background: none;
+  border: none;
+  color: #000;
+  padding: 20px;
+}
+
+.btn.btn-link:hover {
+  background: none;
+  border: none;
+  color: #999;
+}
+
+// Footer
+
+footer .container {
+  display: none;
+}
+
+// Wrapper
+
+#wrapper {
+  background-color: #f2f2f2!important;
+}
+
+.content {
+  background-color: #f2f2f2!important;
+}
+
+// Profile
+
+.edit-profile-page  {
+  width: 90%;
+}
+.edit-profile-page .form-group .radio.selected, .service-type.selected {
+  background: #e6e6e6;
+  font-style: italic;
+}
+
+
+.user-card .profile-info .name-location h3 {
+  text-transform: none;
+  letter-spacing: 1px;
+}
+
+.user-card .profile-info hr {
+  border-top: 1px solid lightgray;
+}
+
+.btn-success {
+  color: white;
+  border: none;
+}
+.btn-success:hover {
+  background-color: #73cb9a;
+  border: none;
+}
+
+.user-card .action-calls {
+  box-shadow: none;
+  border-radius: 0px;
+}
+
+#profile-img {
+  border-radius: 100px;
+}
+
+.col-sm-6 {
+  text-align: center;
+}
+
+
+
+// Status
+
+.status {
+  width: 140px!important;
+  height: 140px!important;
+  padding: 10px!important;
+}
+
+// Transactions
+
+.transaction-page .transaction-table a {
+  color: #000;
+}
+
+.transaction-page .transaction-table .content {
+  background-color: #fff!important;
+}
+
+.transaction-page .transaction-table {
+  margin-top: 0px;
+}
+
+.transaction-page .transaction-table .request-info {
+
+  border-radius: 0px;
+}
+
+// Else
+
+ #review-activity {
+    width: 100%;
+    background: none;
+    border: none;
+  }
+
+.col-md-12 {
+  width: 90%;
+  display: block;
+  margin: 0 auto;
+}
+
+.account-page {
+  width: 90%;
+}
+
+#item1 .question-content {
+  margin-top:50px;
+   @media (max-width: $screen-sm) {
+    margin-top: 150px;
+  }
+}
+
+@media (min-width: 1200px) {
+.container {
+    width: 50%;
+}
+
+.content-page {
+    width: 50%;
+  }
+
+}
+
+@media (min-width: 770px) {
+  .col-md-6 {
+    margin: 0 auto;
+    float: none;
+    width: 100%;
+  }
+
+  .col-sm-4 {
+    width: 58.5%;
+  }
+
+   .form-group .col-sm-6 {
+      width: 58.5%;
+  }
+
+  .user-profile .row:nth-child(1) {
+      display: block;
+  }
+
+  .user-profile {
+        width: 50%;
+  }
+
+  .account-page {
+      width: 50%;
+  }
+
+  .account-page .col-sm-4  {
+      width: 100%;
+  }
+
+  .account-page .col-sm-offset-3  {
+      margin-left: 0;
+  }
+}
+
+// Request
+
+.service-type {
+  background: none;
+  border-color: #c9c9c9;
+}
+
+.modal-body {
+  padding: 10px;
+  background: #f2f2f2;
+}
+
+.modal-body .container-fluid .row {
+  margin: 0px;
+}
+
+.form-group {
+  margin-top: 15px;
+  margin-bottom: 0px;
+}
+
+// Wallet
+
+.action-section.collapse.in {
+  background: #e6e6e6;
+}
+
+.panel-container {
+  margin-bottom: -5px;
 }
